--- a/DuplicatePhotoFinder/View/MainWindow.xaml
+++ b/DuplicatePhotoFinder/View/MainWindow.xaml
@@ -29,6 +29,6 @@
             <Button Name="openFileDialogButton" Padding="10,2,10,2" Margin="8,0,0,0" Content="..." Grid.Column="2" Grid.Row="1" Click="OpenFileDialogButton_Click"/>
         </Grid>
         <TextBlock Text="{Binding PicturePath}" Grid.Row="1" />
-        <Button Padding="10,5,10,5" Margin="5" Content="Search" HorizontalAlignment="Right" Grid.Row="2"/>
+        <Button Padding="10,5,10,5" Margin="5" Content="Search" HorizontalAlignment="Right" Grid.Row="2" Command="{Binding SearchCommand}"/>
     </Grid>
 </Window>
