--- a/DuplicatePhotoFinder/View/MainWindow.xaml
+++ b/DuplicatePhotoFinder/View/MainWindow.xaml
@@ -6,6 +6,22 @@
         xmlns:local="clr-namespace:DuplicatePhotoFinder"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type local:DuplicatePhotoViewModel}">
+            <ListBox ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=DuplicatePictures}">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel IsItemsHost="True" />
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding Path=Path}" Height="192" Width="192"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -28,7 +44,7 @@
                      Text="{Binding Path=PicturePath, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True, ValidatesOnDataErrors=True}"/>
             <Button Name="openFileDialogButton" Padding="10,2,10,2" Margin="8,0,0,0" Content="..." Grid.Column="2" Grid.Row="1" Click="OpenFileDialogButton_Click"/>
         </Grid>
-        <TextBlock Text="{Binding PicturePath}" Grid.Row="1" />
+        <ListBox ItemsSource="{Binding DuplicatePictures}" Grid.Row="1" Grid.ColumnSpan="3" />
         <Button Padding="10,5,10,5" Margin="5" Content="Search" HorizontalAlignment="Right" Grid.Row="2" Command="{Binding SearchCommand}"/>
     </Grid>
 </Window>
