--- a/DuplicatePhotoFinder/View/MainWindow.xaml
+++ b/DuplicatePhotoFinder/View/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Window.Resources>
+        <local:BoolToVisibilityConverter x:Key="boolToVisibilityConverter" />
         <DataTemplate DataType="{x:Type local:DuplicatePhotoViewModel}">
             <ListBox ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=DuplicatePictures}">
                 <ListBox.ItemsPanel>
@@ -28,7 +29,11 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0" Grid.ColumnSpan="2" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -44,7 +49,12 @@
                      Text="{Binding Path=PicturePath, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True, ValidatesOnDataErrors=True}"/>
             <Button Name="openFileDialogButton" Padding="10,2,10,2" Margin="8,0,0,0" Content="..." Grid.Column="2" Grid.Row="1" Click="OpenFileDialogButton_Click"/>
         </Grid>
-        <ListBox ItemsSource="{Binding DuplicatePictures}" Grid.Row="1" Grid.ColumnSpan="3" />
-        <Button Padding="10,5,10,5" Margin="5" Content="Search" HorizontalAlignment="Right" Grid.Row="2" Command="{Binding SearchCommand}"/>
+        <ListBox ItemsSource="{Binding DuplicatePictures}" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <TextBlock Text="Scanning pictures..." Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" VerticalAlignment="Center"
+                   Visibility="{Binding Path=SearchInitialization, Converter={StaticResource boolToVisibilityConverter}}" />
+        <ProgressBar Value="{Binding Path=CurrentFileIndex}" Maximum="{Binding Path=TotalFileCount}" Margin="8"
+                     Grid.Row="2" Visibility="{Binding Path=IsSearchingProgressBar, Converter={StaticResource boolToVisibilityConverter}}"/>
+        <Button Padding="10,5,10,5" Margin="5" Content="Search" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="1"
+                Command="{Binding SearchCommand}"/>
     </Grid>
 </Window>
